<resources>
    <string name="app_name">Basic E-Commerce</string>
    <string name="sales_desc">Sales</string>
    <string name="contacts_text">Contacts</string>
    <string name="about_text">About</string>
    <string name="home_page_text">Home</string>
    <string name="logo_of_app_1">Courses</string>
    <string name="logo_of_app_2">App</string>
    <string name="filter_desc">Filter</string>
    <string name="category_desc">category</string>
    <string name="category_name">Item</string>
    <string name="product_img_desc">Product</string>
    <string name="product_name">Product name</string>
    <string name="product_start_date_info">Start date:</string>
    <string name="product_level_info">Level:</string>
    <string name="product_text">You will learn how to build graphical applications for a PC, Java-based website development Spring Boot, learn how to build full-fledged Android applications and perfectly learn the Java language itself!</string>
    <string name="add_to_cart_button">Add to cart</string>
    <string name="cart_button">Cart</string>
</resources>