<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/productPageBackground"
    tools:context=".ProductPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/aside_BG_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:contentDescription="@string/sales_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_hot_deal" />

        <TextView
            android:id="@+id/contacts"
            style="@style/GlobalTextViewMontserrat.20"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/contacts_text"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/about"
            style="@style/GlobalTextViewMontserrat.20"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/about_text"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/homePage"
            style="@style/GlobalTextViewMontserratBold.20"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/home_page_text"
            app:layout_constraintBottom_toTopOf="@+id/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/productPageImage"
        android:layout_width="0dp"
        android:layout_height="238dp"
        android:contentDescription="@string/product_img_desc"
        android:scaleType="centerCrop"
        android:transitionName="productImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_java" />

    <TextView
        android:id="@+id/productPageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/product_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/productPageImage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/productPageImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ProductTextView.Montserrat"
                    android:layout_margin="11dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/product_start_date_info" />

                <TextView
                    style="@style/ProductTextView.Montserrat"
                    android:layout_margin="11dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/product_level_info" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/productPageDate"
                    style="@style/ProductTextView.MontserratBold"
                    android:layout_margin="11dp"
                    android:text="@string/product_start_date_info" />

                <TextView
                    android:id="@+id/productPageLevel"
                    style="@style/ProductTextView.MontserratBold"
                    android:layout_margin="11dp"
                    android:layout_marginStart="34dp"
                    android:text="@string/product_level_info" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/productPageText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/product_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/addToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_to_cart_button"
        android:layout_marginTop="44dp"
        android:background="@android:color/transparent"
        android:onClick="addToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/productPageText"
        app:srcCompat="@drawable/ic_cart_button" />

</androidx.constraintlayout.widget.ConstraintLayout>