<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_BG_color"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/aside_BG_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:contentDescription="@string/sales_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_hot_deal" />

        <TextView
            android:id="@+id/contacts"
            style="@style/GlobalTextViewMontserrat.20"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/contacts_text"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/about"
            style="@style/GlobalTextViewMontserrat.20"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/about_text"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/homePage"
            style="@style/GlobalTextViewMontserratBold.20"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/home_page_text"
            app:layout_constraintBottom_toTopOf="@+id/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/logoApp1"
        style="@style/GlobalTextViewMontserrat.40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="55dp"
        android:text="@string/logo_of_app_1"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logoApp2"
        style="@style/GlobalTextViewMontserratBold.40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="55dp"
        android:text="@string/logo_of_app_2"
        android:textColor="@color/logo_app"
        app:layout_constraintStart_toEndOf="@+id/logoApp1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/clearFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/filter_desc"
        android:onClick="clearCategoryFilter"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/logoApp1"
        app:srcCompat="@drawable/ic_filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/clearFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearFilter"
        app:layout_constraintTop_toTopOf="@+id/clearFilter"
        tools:listitem="@layout/category_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/categoryRecycler" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cart_button"
        android:onClick="openCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/productRecycler"
        app:srcCompat="@drawable/ic_cart" />

</androidx.constraintlayout.widget.ConstraintLayout>